objects/Forecast__c.object
<CustomObject>
    <fields>
        <fullName>TCV_P_M__c</fullName>
        <formula>Product_Bookings__c + Maint_Bookings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV(P&amp;M)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Bookings_Software__c</fullName>
        <formula>Forecast_Target__r.Software_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Bookings Software</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_FX_Adjustment_to_Dollar__c</fullName>
        <formula>FX_Adjustment_to_Dollar__c +  All_FX_Adjustment_to_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total FX Adjustment to Dollar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hardware__c</fullName>
        <formula>Hardware__c +   Hardware_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Hardware Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Headcount__c</fullName>
        <formula>HeadCount__c +   Headcount_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Headcount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_IP__c</fullName>
        <formula>IP__c  + IP_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings IP Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Includes_CCP__c</fullName>
        <formula>Includes_CCP_Adjustment__c + Includes_CCP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings CCP Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Maint_HW__c</fullName>
        <formula>Maintenance_Hardware__c  +  Maint_HW_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Maintenance Hardware Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Maint_SW__c</fullName>
        <formula>Maintenance_Software__c  +  Maint_SW_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Maintenance Software Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Product_HW__c</fullName>
        <formula>Product_Hardware__c  +  Prod_HW_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Product Hardware Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Product_SW__c</fullName>
        <formula>Product_Software__c  +  Prod_SW_Revenue_Adjust__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Product Software Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Rev_Services__c</fullName>
        <formula>Rev_Services_Adjustment__c +  Rev_Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Services Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Servc_Pass_Through__c</fullName>
        <formula>Servc_Pass_Through__c +  Servc_Pass_Through_Adjust__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Serv Pass Through Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Services__c</fullName>
        <formula>Services_Adjustment__c +  Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Services Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Software__c</fullName>
        <formula>Software__c  + Software_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Software Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upfront_Cash__c</fullName>
        <formula>Cash_From_New_Bookings_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upfront Cash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <label>Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ctual_Headcount_Adjustment__c</fullName>
        <description>Actual Headcount Adjustment</description>
        <label>Actual Head Count Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isIPTensilica__c</fullName>
        <formula>if( CONTAINS( $Label.RVP_to_WWSF , OwnerId ),&apos;true&apos;,&apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isIPTensilica</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>total_Best_Case_Amount__c</fullName>
        <label>Bookings Pipeline Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Forecast</label>
    <listViews>
        <fullName>MSKI_RSF</fullName>
        <columns>isSubmitted__c</columns>
        <columns>NAME</columns>
        <columns>Week_Ending__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Previous_Forecast__c</columns>
        <columns>Region__c</columns>
        <columns>Quarter__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Forecast__c.SFO_Forecast</value>
        </filters>
        <label>RSF</label>
        <language>en_US</language>
        <sharedTo>
            <role>Asia_Pacific_Sales_Finance</role>
            <role>Asia_Pacific_Sales_Finance_2</role>
            <role>EMEA_Sales_Finance</role>
            <role>India_Sales_Finance</role>
            <role>India_Sales_Finance_2</role>
            <role>Japan_Sales_Finance</role>
            <role>Japan_Sales_Finance_2</role>
            <role>NA_Sales_Finance</role>
            <role>NA_Sales_Finance_2</role>
            <role>Operations</role>
            <role>Sales_Finance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Forecasts</fullName>
        <columns>NAME</columns>
        <columns>Week_Ending__c</columns>
        <columns>Quarter__c</columns>
        <columns>Region__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>isSubmitted__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Forecasts</label>
    </listViews>
    <listViews>
        <fullName>RSF_AsiaPac</fullName>
        <columns>isSubmitted__c</columns>
        <columns>NAME</columns>
        <columns>Week_Ending__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Previous_Forecast__c</columns>
        <columns>Region__c</columns>
        <columns>Quarter__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Forecast__c.SFO_Forecast</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Asia Pacific</value>
        </filters>
        <label>RSF -AsiaPac</label>
        <language>en_US</language>
        <sharedTo>
            <role>Asia_Pacific_Sales_Finance</role>
            <role>Asia_Pacific_Sales_Finance_2</role>
            <role>EMEA_Sales_Finance</role>
            <role>India_Sales_Finance</role>
            <role>India_Sales_Finance_2</role>
            <role>Japan_Sales_Finance</role>
            <role>Japan_Sales_Finance_2</role>
            <role>NA_Sales_Finance</role>
            <role>NA_Sales_Finance_2</role>
            <role>Operations</role>
            <role>Sales_Finance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RVP3</fullName>
        <columns>isSubmitted__c</columns>
        <columns>NAME</columns>
        <columns>Week_Ending__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Previous_Forecast__c</columns>
        <columns>Region__c</columns>
        <columns>Quarter__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Forecast__c.RVP_Forecast</value>
        </filters>
        <label>RVP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RVP_Test</fullName>
        <columns>isSubmitted__c</columns>
        <columns>NAME</columns>
        <columns>Week_Ending__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Previous_Forecast__c</columns>
        <columns>Region__c</columns>
        <columns>Quarter__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>8/15/2016 12:00 AM</value>
        </filters>
        <label>RVP Test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WWSF_RSF_Forecasts</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>isSubmitted__c</columns>
        <columns>NAME</columns>
        <columns>Week_Ending__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Previous_Forecast__c</columns>
        <columns>Region__c</columns>
        <columns>Quarter__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Forecast__c.SFO_Forecast,Forecast__c.WSFO_Forecast</value>
        </filters>
        <label>WWSF &amp; RSF Forecasts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Operations</role>
            <role>WWSF</role>
            <role>WWSF_Proxy</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecasts</pluralLabel>
    <recordTypes>
        <fullName>AD_VP</fullName>
        <active>true</active>
        <description>Forecast for AD and VP users</description>
        <label>AD/VP</label>
    </recordTypes>
    <recordTypes>
        <fullName>RVP_Forecast</fullName>
        <active>true</active>
        <label>RVP</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFO_Forecast</fullName>
        <active>true</active>
        <label>RSF</label>
    </recordTypes>
    <recordTypes>
        <fullName>WSFO_Forecast</fullName>
        <active>true</active>
        <label>WWSF</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>